Change .is-active menu class to .active, to avoid overlap with dropdown menu active classes

--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -274,7 +274,7 @@ $menu-icon-spacing: 0.25rem !default;
     }
 
     // Active state
-    .is-active > a {
+    .active > a {
       color: $menu-item-color-active;
       background: $menu-item-background-active;
     }
